apps/hygacon-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hygacon-web
  namespace: ynoacamino
  labels:
    app: hygacon-web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: hygacon-web
  template:
    metadata:
      labels:
        app: hygacon-web
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: hygacon-web
          image: ghcr.io/jp3d-code/hygacon-website:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: hygacon-web-pvc-db
              mountPath: /app/data
            - name: hygacon-web-pvc-media
              mountPath: /app/media

      volumes:
        - name: hygacon-web-pvc-db
          persistentVolumeClaim:
            claimName: hygacon-web-pvc-db
        - name: hygacon-web-pvc-media
          persistentVolumeClaim:
            claimName: hygacon-web-pvc-media
